theme.css
/* ... */
#main #contacts .map:hover a img {
  transform: scale(1.2);
  -webkit-filter: brightness(80%);
  filter: brightness(80%);
}
#main #contacts .map:hover a p {
  opacity: 1;
}
#main #contacts .map:hover a p:hover {
  background-color: dodgerblue;
}
#main #greets {
  padding-top: 7em; /* to fix anchor element*/
  margin: -6em 1em 1em 1em;
  grid-area: 1 / 2 / span 1 / span 1;
}
#main #greets p {
  line-height: 1.9em;
}
#main #greets .buttons {
  display: flex;
  justify-content: space-around;
  margin-top: 2em;
}
#main #greets .buttons div {
  position: relative;
  margin-right: 0.5em;
}
#main #greets .buttons div h2 {
  border-radius: 8px;
  background-color: #f1f1f1;
  padding: 0.5em 1em;
  font-size: 1.15em;
  text-align: center;
  cursor: pointer;
}
#main #greets .buttons .bt div {
  position: absolute;
  width: 100%;
  height: 0;
  transition: 0.1s ease;
  overflow: hidden;
}
#main #greets .buttons .bt:hover div {
  height: auto;
  overflow: visible;

}
#main #greets .buttons .bt a  {
  display: block;
  pointer-events: none;
  text-align: center;
  opacity: 0;
  transition: .4s ease;
  line-height: 1.5em;
  border-radius: 8px;
  background-color: #f1f1f1;
  margin: 0.5em 0.6em 0.6em 0.6em;
  padding: 0.5em;
  font-size: 0.8em;
}
#main #greets .buttons .bt:hover a {
  opacity: 1;
  transform: translateY(0.4em);
  pointer-events: auto;
}
#main #greets .buttons .bt:hover a:hover, #main #greets .buttons .bt h2:hover, #main #greets .buttons .single h2:hover {
  background-color: dodgerblue;
  color: white;
}

#main #comunications {
  padding-top: 7em; /* to fix anchor element*/
  margin: -6em 1em 1em 1em;
  grid-area: 2 / 2 / span 1 / span 1;
}

.footer {
  background-color: #f1f1f1;
  text-align: right;
  padding-top: 3em;
}
@media only screen and (max-width: 600px) {
  .header {
    flex-direction: flex-start;
    height: 4em;
  }
  .header a {
    display: none;
  }
  .header .RE {
    display: none;
  }
  .header .menu {
    display: flex;
    z-index: 6;
    justify-content: center;
    align-items: center;
    margin-right: 1em;

  }
  .bigtitle {
    height: 30%;
    z-index: 0;
    margin-top: 4em;
  }
  .bigtitle .frontground {
    display: none;
  }
  .row .three{
    padding: 80px 30px;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    background-color: #2c3e50;
    color: #454545;
    text-align: center;
  }
  /*Logo and animations by https://codepen.io/RRoberts/ */
  .hamburger {
    z-index: 10;
  }
  .hamburger .line{
    width: 50px;
    height: 5px;
    background-color: #454545;
    display: block;
    margin: 8px auto;
    -webkit-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
  }  
  .hamburger:hover{
    cursor: pointer;
  }
  .header .menu #hamburger-1.is_active .line:nth-child(2), .header .menu #hamburger-1.is_active .line:nth-child(2){
    opacity: 0;
  }
  #hamburger-1.is_active .line:nth-child(1){
    -webkit-transform: translateY(13px) rotate(45deg);
    -ms-transform: translateY(13px) rotate(45deg);
    -o-transform: translateY(13px) rotate(45deg);
    transform: translateY(13px) rotate(45deg);
  } 
  #hamburger-1.is_active .line:nth-child(3){
    -webkit-transform: translateY(-13px) rotate(-45deg);
    -ms-transform: translateY(-13px) rotate(-45deg);
    -o-transform: translateY(-13px) rotate(-45deg);
    transform: translateY(-13px) rotate(-45deg);
  }
  .openmenu {
    transition: .4s ease;
    top: 2.9em;
    left: 0;
    position: absolute;
    width: 100%;
    opacity: 0;
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px;
    padding: 1em;
    box-sizing: border-box;
    background: #f1f1f1;
  }
  .openmenu.is_active a {
    display: block;
    line-height: 150%;
  }
  .openmenu.is_active {
    opacity: 1;
    display: block;
    transform: translateY(1em);
    
  }
  .bigtitle .background {
    animation: none;
  }
  .bigtitle .frontground .nav {
    display: none;
  }
  .bigtitle .frontground {
    font-size: 80%;
  }
  .bigtitle .frontground .RE {
    display: none;
  }
  #main {
    margin-top: -4em;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;

  }
  #main #greets .buttons {
    font-size: 85%;
  }
  #main #greets .buttons {
    flex-direction: column;
  }
  #main #greets .buttons div {
    width: 50%;
    margin-bottom: 0.8em;
  }
  #main #greets .buttons .bt div {
    top: -1em;
    right: -110%;
    width: 100%;
  }
  #main #comunications .news {
    font-size: 0.7em;
    width: 100%;
    margin-left: -0.8em
  }
  #main #comunications .news .front {
    grid-template-columns: 19% 67% 14%;

    padding: 0.3em;
    padding-right: 0.7em;
  }
  #main #comunications {
    margin: -6em -1em 7.5em 0;
  }
  #main #comunications .news .body p {
    font-size: 1.3em;
    padding: 1em; 
  }
}
@media only screen and (max-width: 390px) {
  .bigtitle .frontground {
    font-size: 70%;
  }
  #main #comunications .news .front {
    padding-right: 0.3em
  }
  #main #greets .buttons {
    font-size: 63%;
  }
}

#main #comunications {
  display:flex;
  justify-content: flex-start;
  align-items: center;

}
/*React elements style*/
.news {
  width: 100%;
  overflow: hidden;
  border-radius: 45px;
  background-color: #f1f1f1;
  margin-bottom: 0.5em;
}
.news .front {
  align-items: center;
  width: inherit;
  padding: 0.5em 0.5em 0.5em 1em;
  display: grid;
  grid-template-columns: 16% 70% 15%;
}
.news .front h2 {
  display: inline;
  font-family: sans-serif;
}
.news .front h2.number {
  grid-area: 1 / 1 / span 1 / span 1;
}
.news .front h2.name {
  grid-area: 1 / 2 / span 1 / span 1;
}
/* ... */

